--- a/index.html
+++ b/index.html
@@ -171,9 +171,7 @@
                 <h2>About me</h2>
                 <div class="aboutMe">
                     <p class='p_dot25'>I am a developer with 5+ years experience working in automotive and backend projects in multicultural environment, fluent Java and Python language, and work effectively with lots of tools, IDEs, OSs and system schemes. I'm learning Python and ReactJS so I can extend my abilites. I love to work in diversity environments, where I can learn more from other people’s point of view.</p>
-                    <p class='p_dot25'>I finsished my Master degree of Data Science in University of Adelaide on 2022. Currently based on <b>Newcastle, NSW</b>.</p>
-
-                    <p class='p_dot25'>Always eager looking for new challenges.</p>
+                    <p class='p_dot25'>I live in <b>Newcastle, NSW</b> and proudly working for <b>NSW Health Pathology</b></p>
 
                 </div>
                 <div class="ending"></div>
@@ -226,14 +224,79 @@
 
                 <div class="columnWrapper flexGrow py-2 pl_dot75" id="myWork">
                     <div class="myCardWrapper flexGrow">
-                        <div class="title bgBlue white flexGrow">Java Developer</div>
-                        <div class="title bgBlue2 white flexGrow">Vintrace (Vic)</div>
-                        <div class="title bgBlue3 blue flexGrow">Remote</div>
-                        <div class="title bgBlue4 blue flexGrow5">2022 Sep - now</div>
+                        <div class="title bgBlue white flexGrow">Data Migration Analysis - DevOps Engineer</div>
+                        <div class="title bgBlue2 white flexGrow">NSW Health Pathology</div>
+                        <div class="title bgBlue3 blue flexGrow">NSW</div>
+                        <div class="title bgBlue4 blue flexGrow5">2024 June - now</div>
                     </div>
                     <div class="myCardWrapper flexGrow">
                         <div class="techTask">
-                            <h4>Task</h4>
+                            <h4>Data Migration</h4>
+                            <div class="myCard ">
+                                <div class="meta textCenter"><i class="fas fa-angle-right w16px"></i></div>
+                                <div class="details">Analysis data relationship</div>
+                            </div>
+                            <div class="myCard ">
+                                <div class="meta textCenter"><i class="fas fa-angle-right w16px"></i></div>
+                                <div class="details">Extract data from source system, transform into suitable format that Epic can import</div>
+                            </div>
+                            <div class="myCard ">
+                                <div class="meta textCenter"><i class="fas fa-angle-right w16px"></i></div>
+                                <div class="details">Develop UDF, Stored procedure and tasks for automating data migration</div>
+                            </div>
+                            <h4>DevOps</h4>
+                            <div class="myCard ">
+                                <div class="meta textCenter"><i class="fas fa-angle-right w16px"></i></div>
+                                <div class="details">Deploy and maintain services, including Health Digest and NextBridges</div>
+                            </div>
+                            <div class="myCard ">
+                                <div class="meta textCenter"><i class="fas fa-angle-right w16px"></i></div>
+                                <div class="details">Manage Azure Cloud resources, including Kubernetes clusters, deployments, and configs, VMs, SQL servers, ServiceBus, etc </div>
+                            </div>
+                            <div class="myCard ">
+                                <div class="meta textCenter"><i class="fas fa-angle-right w16px"></i></div>
+                                <div class="details">Coop with other team to maintain stable connections throughout NSW Health networks</div>
+                            </div>
+                        </div>
+                        <div class="techTool">
+                            <h4>Techniques / tools</h4>
+                            <div class="p5px myCardWrapper">
+                                <div class="skewTag"><p>Data analysis</p></div>
+                                <div class="skewTag"><p>ETL</p></div>
+                                <div class="skewTag"><p>Python</p></div>
+                                <div class="skewTag"><p>SQL</p></div>
+                                <div class="skewTag"><p>Snowflake</p></div>
+                                <div class="skewTag"><p>Jupyter</p></div>
+                                <div class="skewTag"><p>Streamlit</p></div>
+                                <div class="skewTag"><p>HL7</p></div>
+                                <div class="skewTag"><p>Flat file (defined by Epic)</p></div>
+                                <div class="skewTag"><p>Epic (health system)</p></div>
+                            </div>
+
+                            <div class="m-3"><span style="opacity:0;">This sentence is invisible</span></div>
+                            <div class="p5px myCardWrapper">
+                                <div class="skewTag"><p>NodeJS</p></div>
+                                <div class="skewTag"><p>Docker</p></div>
+                                <div class="skewTag"><p>Kubernetes</p></div>
+                                <div class="skewTag"><p>Bash script</p></div>
+                                <div class="skewTag"><p>CI/CD</p></div>
+                                <div class="skewTag"><p>HL7</p></div>
+                                <div class="skewTag"><p>Epic (health system)</p></div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="columnWrapper flexGrow py-2 pl_dot75" id="myWork">
+                    <div class="myCardWrapper flexGrow">
+                        <div class="title bgBlue white flexGrow">Java Developer</div>
+                        <div class="title bgBlue2 white flexGrow">Vintrace (Vic)</div>
+                        <div class="title bgBlue3 blue flexGrow">Remote</div>
+                        <div class="title bgBlue4 blue flexGrow5">2022 Sep - 2024 June</div>
+                    </div>
+                    <div class="myCardWrapper flexGrow">
+                        <div class="techTask">
                             <div class="myCard ">
                                 <div class="meta textCenter"><i class="fas fa-angle-right w16px"></i></div>
                                 <div class="details">Maintain and update Vintrace software, including MySQL databse, Java backend and frontend</div>
@@ -280,6 +343,8 @@
                 </div>
 
 
+                <!-- <div class="m-20"><span style="opacity:0;">This sentence is invisible</span></div> -->
+
                 <div class="columnWrapper flexGrow py-2 pl_dot75" id="myWork">
                     <div class="myCardWrapper flexGrow">
                         <div class="title bgBlue white flexGrow">Research team member</div>
@@ -296,7 +361,6 @@
                     <div class="myCardWrapper flexGrow">
                         <!-- <div class="p_dot25_1 columnWrapper bgBlue3 flexGrow w-1/3"> -->
                         <div class="techTask">
-                            <h4>Task</h4>
                             <div class="myCard ">
                                 <div class="meta textCenter"><i class="fas fa-angle-right w16px"></i></div>
                                 <div class="details">Scrape Twitter's tweets by accounts or keywords or both, let user label tweets with 3 status(negative, neutral, and positive) and related given  event</div>
@@ -367,7 +431,6 @@
                     </div>
                     <div class="myCardWrapper flexGrow">
                         <div class="techTask">
-                            <h4>Technical task</h4>
                             <div class="myCard ">
                                 <div class="meta textCenter"><i class="fas fa-angle-right w16px"></i></div>
                                 <div class="details">Establish and maintain payment channels</div>
@@ -422,7 +485,6 @@
                     </div>
                     <div class="myCardWrapper flexGrow">
                         <div class="techTask">
-                            <h4>Technical task</h4>
                             <div class="myCard ">
                                 <div class="meta textCenter"><i class="fas fa-angle-right w16px"></i></div>
                                 <div class="details">Prepare make-file based on project's structure, project resources, chipset profilers, compiler profilers</div>
@@ -470,7 +532,6 @@
 
                     <div class="myCardWrapper flexGrow">
                         <div class="techTask">
-                            <h4>Technical task</h4>
                             <div class="myCard ">
                                 <div class="meta textCenter"><i class="fas fa-angle-right w16px"></i></div>
                                 <div class="details">Develop components: AUTOSAR's basic software, CAN
@@ -512,7 +573,6 @@
 
                     <div class="myCardWrapper flexGrow">
                         <div class="techTask">
-                            <h4>Technical task</h4>
                             <div class="myCard ">
                                 <div class="meta textCenter"><i class="fas fa-angle-right w16px"></i></div>
                                 <div class="details">Develop automation test and performance test for 4G
@@ -554,6 +614,8 @@
                     <div class="skewTag"><p>SQL</p></div>
                     <div class="skewTag"><p>ORM</p></div>
 
+                    <div class="skewTag bgBlue2"><p>ETL</p></div>
+                    <div class="skewTag bgBlue2"><p>Data migrating</p></div>
                     <div class="skewTag bgBlue2"><p>Machine learning</p></div>
                     <div class="skewTag bgBlue2"><p>DevOps</p></div>
                     <div class="skewTag bgBlue2"><p>CI/CD</p></div>
@@ -575,18 +637,6 @@
             </div>          
 
             <div class="block">
-                <h2>Learning</h2>
-                <div class="myCardWrapper px-10">
-                    <div class="skewTag"><p>Kotlin</p></div>
-                    <div class="skewTag"><p>SpringBoot 3</p></div>
-                    <div class="skewTag bgBlue2"><p>Postgres</p></div>
-                    <div class="skewTag bgBlue2"><p>ReactJS</p></div>
-                </div>
-                <div class="ending"></div>
-            </div>
-            <!-- <div class="block m-32"></div> -->
-
-            <div class="block">
                 <h2>Going to learn</h2>
                 <div class="myCardWrapper px-10">
                     <div class="skewTag"><p>Go</p></div>
@@ -596,9 +646,9 @@
             </div>
             <div class="block m-32"></div>
 
-            <!-- <div class="block m-20"><span style="opacity:0;">This sentence is invisible</span></div>
             <div class="block m-20"><span style="opacity:0;">This sentence is invisible</span></div>
-            <div class="block m-20"><span style="opacity:0;">This sentence is invisible</span></div>  -->
+            <div class="block m-18"><span style="opacity:0;">This sentence is invisible</span></div>
+            <!-- <div class="block m-20"><span style="opacity:0;">This sentence is invisible</span></div>  -->
 
 
         </div>
