--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             </blockquote>
             
 
-            <div class="block mt-10">
+            <div class="block ">
                 <h2>About me</h2>
                 <div class="aboutMe">
                     <p class='p_dot25'>I am a developer with 5+ years experience working in automotive and backend projects in multicultural environment, fluent Java and Python language, and work effectively with lots of tools, IDEs, OSs and system schemes. I'm learning Python and ReactJS so I can extend my abilites. I love to work in diversity environments, where I can learn more from other people’s point of view.</p>
@@ -343,7 +343,7 @@
                 </div>
 
 
-                <!-- <div class="m-20"><span style="opacity:0;">This sentence is invisible</span></div> -->
+                <div class="m-10"><span style="opacity:0;">This sentence is invisible</span></div>
 
                 <div class="columnWrapper flexGrow py-2 pl_dot75" id="myWork">
                     <div class="myCardWrapper flexGrow">
@@ -633,7 +633,7 @@
                     <div class="skewTag bgBlue4 blue"><p>Bug analyze</p></div>
                     <div class="skewTag bgBlue4 blue"><p>Team cooperate</p></div>
                 </div>
-                <div class="ending"></div>
+                <!-- <div class="ending"></div> -->
             </div>          
 
             <div class="block">
@@ -646,8 +646,8 @@
             </div>
             <div class="block m-32"></div>
 
-            <div class="block m-20"><span style="opacity:0;">This sentence is invisible</span></div>
-            <div class="block m-18"><span style="opacity:0;">This sentence is invisible</span></div>
+            <!-- <div class="block m-20"><span style="opacity:0;">This sentence is invisible</span></div> -->
+            <!-- <div class="block m-18"><span style="opacity:0;">This sentence is invisible</span></div> -->
             <!-- <div class="block m-20"><span style="opacity:0;">This sentence is invisible</span></div>  -->
 
 
