--- a/coverletter_DataIntegrationSpecialist.html
+++ b/coverletter_DataIntegrationSpecialist.html
@@ -8,7 +8,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Tom Tran's profile</title>
+    <title>Tom Tran's cover letter</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -37,7 +37,8 @@
             <div class="profileText block">
                 <h2 class='name '>Tom Tran<br>
                 </h2>
-                <p><i class="fas fa-check-circle blue3 p_dot1"></i> Software Developer</p>
+                <p><i class="fas fa-check-circle green p_dot1"></i> Software Developer</p>
+                <p><i class="fa fa-check-circle green p_dot1"> </i> Data Engineer</p>
 
             </div>
             <div class="block ">
@@ -70,22 +71,35 @@
             <div class="block mt-20 mr-10">
                 <h1>COVER LETTER</h1>
                 <br class="aboutMe">
-                <p class='p_dot25 mt-4 mr-6'>Dear NewyTechPeople Hiring Manager,</p>
+                <p class='p_dot25 mt-4 mr-6'>Dear eHealth Hiring Manager,</p>
 
-                <p class='p_dot25 mt-4 mr-6'>My name is Thien Toan (Tom) Tran, graduated on July 2022 from University of Adelaide, currently living in <span class="blockUnderline">Newcastle, NSW</span> and working remotely for Vintrace, a Software company manage all aspect of wine making process at Melbourne. I'm looking for an opportunity to improve my skills as a Software developer as well as new challenges. I believe I could be a good match for your opening position of Java Developer</p>
+                <p class='p_dot25 mt-4 mr-6'>My name is Thien Toan (Tom) Tran, graduated on July 2022 from University of Adelaide, currently living in <span class="blockUnderline">Newcastle, NSW</span> and working NSW Health Pathology. I'm looking for an opportunity to improve my data engineering skills and I believe I could be a good match for your opening position of <span class="blockUnderline">Data Migration Integration Specialist</span></p>
+                
                 <p class="p_dot25 mt-4 mr-6">
-Currently I'm working as a Data Analysis in SDPR. 
-My main task is to develop and maintain a data pipeline that extract data from multiple sources
-, transform it into a format that can be used for analysis, and load it into a data warehouse. 
-I have experience with <span class="blockUnderline">Python, SQL, and AWS</span> for data processing and analysis. 
-I also have experience with <span class="blockUnderline">Java</span> for developing web applications and RESTful APIs.
+                    Currently I'm working as <span class="blockUnderline">Data Analysis in SDPR</span>. 
+                    My main task is to develop and maintain a data pipeline that extract data from multiple sources
+                    , transform it into a format that compatible with Mirth® Connect, or matching Epic's flat file descriptions. 
+                    I have experience with <span class="blockUnderline">Python, SQL, and Snowflake</span> for effectively analyze, transform and process the data. 
+                    I've been upgrade my workflow by adding <span class="blockUnderline">Snowflake's functions, procedures, tasks and streams</span> in order to automate the data pipeline.
                 </p>
 
                 <p class="p_dot25 mt-4 mr-6">
-                    During the time in University, I handled a fullstack ML project using <span class="blockUnderline"> FastAPI and HuggingFace (Python)</span> as backend and <span class="blockUnderline">NextJS</span> as frontend, from developing to deploying.
-                    Looking a bit further to the past, I had one year working in Zalopay, a e-wallet service that provide user <span class="blockUnderline">a convenient payment methods</span> with popular banks in Vietnam. My team at that time was responsible for
-                    developing API gateways that connect to each of those banks.
+                    Thanks to the working nature, I've been working with <span class="blockUnderline">Mirth® Connect</span> for a while
+                    , and I have a good understanding of how Mirth® Connect works and also the logics around it. 
+                    Based on the initial work done by Platform team
+                    , I'm able to maintaint the whole working process: 
+                    <span class="blockUnderline">collecting extraction data</span> using Task Scheduler
+                    , <span class="blockUnderline">configurating Mirth's channel</span>
+                    , and <span class="blockUnderline">securely transferring data</span> to Epic in specific HL7 format.
                 </p>
+                <p class="p_dot25 mt-4 mr-6">
+                    <span class="blockUnderline">Configurating Mirth's channel</span> is a very important step in the whole process, since it requires specific transformations to adapt with each data sources, and specific destination parameters to matching with Epic interfaces. With my understanding of JavaScript and computer networking, I can easily modify the channel's code to meet the requirements. 
+                </p>                    
+                <p class="p_dot25 mt-4 mr-6">                    
+                    Additionally, I've proposed connection changes to fix the timeout issue, helping the connection to send <span class="blockUnderline">thousands</span> HL7 messages to Epic <span class="blockUnderline">without any missing.</span>
+                </p>
+
+
                 <p class="p_dot25 mt-4 mr-6">
 
                     I would like to further discuss my skills and experience with you in an interview. Please feel free
